--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,1 +1,34 @@
-
+name: ci 
+on:
+  workflow_dispatch:
+  push:
+    branches: 
+      - main
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          token:  ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          ref: main
+          path: ./tmp-update-repo
+          token:  ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.x
+      - run: |
+          pip install mkdocs-material mike git+https://github.com/jldiaz/mkdocs-plugin-tags.git
+          git add . &&
+          git commit -m "sync repo docs" || echo "No changes to commit" &&
+          git push origin main &&
+          cd .. &&
+          rm -r ./tmp-update-repo &&
+          git pull origin main &&
+          git fetch origin gh-pages --depth=1 &&
+          mike deploy --update-aliases mian &&
+          mike set-default --push mian || echo "No changes to commit"
