--- a/docs/_site.yml
+++ b/docs/_site.yml
@@ -6,3 +6,9 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+output:
+  html_document:
+    highlight: textmate
+    include:
+      after_body: footer.html
+    css: styles.css
