--- a/docs/_site.yml
+++ b/docs/_site.yml
@@ -9,7 +9,5 @@ navbar:
       href: about.html
 output:
   html_document:
+    theme: cosmo
     highlight: textmate
-    include:
-      after_body: footer.html
-    css: styles.css
